--- a/View/Windows/ChangePasswordWindow.xaml
+++ b/View/Windows/ChangePasswordWindow.xaml
@@ -32,6 +32,7 @@
         <TextBlock Grid.Row="4" Text="Подтверждение пароля: "/>
         <PasswordBox Name="OldPasswordPb" Grid.Column="2"/>
         <PasswordBox Name="NewPasswordPb" Grid.Row="4" Grid.Column="2"/>
+        <PasswordBox Name="AcceptNewPasswordPb" Grid.Row="2" Grid.Column="2"/>
         <Button Name="ChangePasswordBtn" Grid.Row="6" Grid.Column="2"
                 Content="Изменить пароль" Click="ChangePasswordBtn_Click"/>
     </Grid>
