--- a/View/Windows/AdministratorWindow.xaml
+++ b/View/Windows/AdministratorWindow.xaml
@@ -5,8 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hotel.View.Windows"
         mc:Ignorable="d"
-        Title="Окно администратора" Height="450" Width="800">
-    <Grid>
-        
+        Title="Окно администратора" MinHeight="720" MinWidth="1280" 
+        WindowStartupLocation="CenterScreen">
+    <Grid Margin="30">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="10" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal">
+            <Button Name="UserBtn" Content="Пользователи"
+                    Click="UserBtn_Click"/>
+            <Separator Width="20" Height="0"/>
+            <Button Name="RoomsBtn" Content="Комнаты"
+                    Click="RoomsBtn_Click"/>
+        </StackPanel>
+
+        <Frame Name="MainFrame" Grid.Row="2"
+               NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
