--- a/View/Pages/UsersListPage.xaml
+++ b/View/Pages/UsersListPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Hotel.View.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="570" d:DesignWidth="1240"
       Title="UsersListPage">
 
     <Grid>
@@ -16,7 +16,7 @@
         </Grid.RowDefinitions>
 
         <Button Name="AddUserBtn"
-                Content="Добваить пользователя"
+                Content="Добавить пользователя"
                 Click="AddUserBtn_Click" 
                 HorizontalAlignment="Left"/>
 
@@ -39,6 +39,57 @@
                     </GridView>
                 </ListView.View>
             </ListView>
+            <Grid Name="UserDetailsGrid" Grid.Column="2" Margin="20">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="10" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="140" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.ColumnSpan="3" 
+                           Text="Информация о пользователе"
+                           FontWeight="SemiBold"/>
+                <TextBlock Grid.Row="2" Text="ФИО"/>
+                <TextBlock Grid.Row="4" Text="Логин"/>
+                <TextBlock Grid.Row="6" Text="Пароль"/>
+                <TextBlock Grid.Row="8" Text="Дата регистрации"/>
+                <CheckBox Grid.Row="10" Grid.ColumnSpan="3" 
+                          Content="Заблокирован"/>
+                <CheckBox Grid.Row="12" Grid.ColumnSpan="3" 
+                          Content="Сменить пароль"
+                          IsHitTestVisible="False"/>
+                    
+                <!--IsReadonly - поле только для чтения (нельзя редактировать)-->
+                <!--IsHitTestVisible - нельзя нажать на элемент-->
+
+                <TextBox Grid.Row="2" Grid.Column="2"/>
+                <TextBox Grid.Row="4" Grid.Column="2" IsReadOnly="True"/>
+                <PasswordBox Grid.Row="6" Grid.Column="2"/>
+                <DatePicker Grid.Row="8" Grid.Column="2" 
+                            IsHitTestVisible="False"/>
+                <Button Name="SaveChangesBtn" Grid.Row="14" 
+                        Grid.ColumnSpan="3"
+                        Content="Сохранить изменения" 
+                        Click="SaveChangesBtn_Click"/>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
