--- a/View/Pages/RoomsPage.xaml
+++ b/View/Pages/RoomsPage.xaml
@@ -13,11 +13,12 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="10" />
             <RowDefinition Height="1*" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal">
-            <TextBox Name="SaerchTb" Width="300"
-                     TextChanged="SaerchTb_TextChanged"/>
+            <TextBox Name="SearchTb" Width="300"
+                     TextChanged="SearchTb_TextChanged"/>
             <Separator Width="20" Height="0" />
             <ComboBox Name="FilterCmb" Width="300"
                       SelectionChanged="FilterCmb_SelectionChanged"/>
@@ -31,7 +32,9 @@
             </Grid.ColumnDefinitions>
 
             <ListBox Name="RoomsLb" 
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                     SelectionChanged="RoomsLb_SelectionChanged"
+                     d:ItemsSource="{d:SampleData ItemCount=5}">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel />
@@ -41,7 +44,7 @@
                     <DataTemplate>
                         <Border BorderThickness="1"
                                 BorderBrush="Black" 
-                                Width="265"
+                                Width="300"
                                 Margin="10">
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -92,7 +95,27 @@
                     <ColumnDefinition Width="10" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
+                <TextBlock Grid.ColumnSpan="3" 
+                           Text="Информация о пользователе"
+                           FontWeight="SemiBold"/>
+
+                <TextBlock Grid.Row="2" Text="Дата заезда:"/>
+                <TextBlock Grid.Row="4" Text="Дата выезда:"/>
+                <TextBlock Grid.Row="6" Text="Клиент:"/>
+
+                <DatePicker Name="EntryDp" Grid.Row="2" 
+                            Grid.Column="2"/>
+                <DatePicker Name="DepartureDp" Grid.Row="4" 
+                            Grid.Column="2"/>
+                <ComboBox Name="ClientCmb" IsEditable="True"
+                          StaysOpenOnEdit="True" Grid.Row="6"
+                          Grid.Column="2"/>
+                <Button Name="BookingBtn" Grid.Row="8" Grid.Column="2"
+                        Content="Оформить" Click="BookingBtn_Click"/>
             </Grid>
         </Grid>
+
+        <TextBlock Name="RoomsByStatusCountTbl" Grid.Row="4"/>
+
     </Grid>
 </Page>
